# s3prl-vc

./: .gitignore  LICENSE  README.md  setup.cfg
egs/TEMPLATE/a2o_vc/: README.md  path.sh  run.sh
egs/TEMPLATE/a2o_vc/conf/: taco2_ar.yaml
egs/TEMPLATE/a2o_vc/local/: data_prep.sh  evaluate.py  vocoder_download.sh
egs/arctic/a2o_vc/: run.sh
egs/arctic/a2o_vc/conf/: diffusion.yaml  f0.yaml  taco2_ar.yaml
egs/arctic/a2o_vc/local/: data_prep.sh  evaluate.py  pretrained_model_download.sh
egs/vcc2020/a2o_vc/: README.md  run.sh
egs/vcc2020/a2o_vc/conf/: taco2_ar.yaml
egs/vcc2020/a2o_vc/local/: vocoder_download.sh
egs/vcc2020/vc_a2o1/: run.sh
egs/vcc2020/vc_a2o1/conf/: taco2_ar.yaml
egs/vcc2020/vc_a2o1/local/: data_download.sh  data_prep.sh  evaluate.py
egs/vcc2020/vc_a2o1/local/lists/: custom_eval_wenchin.yaml
s3prl_vc/: __init__.py
s3prl_vc/datasets/: datasets.py
s3prl_vc/evaluate/: asr.py  asv.py  asv_wespeaker.py  dtw_based.py
s3prl_vc/layers/: utils.py
s3prl_vc/losses/: __init__.py  l1_loss.py  l2_loss.py
s3prl_vc/models/: Taco2_AR.py  __init__.py  diffusion.py
s3prl_vc/models/diffsinger/: README.md  __init__.py  denoiser.py  diffusion.py
s3prl_vc/schedulers/: schedulers.py
s3prl_vc/transform/: f0.py  spectrogram.py
s3prl_vc/upstream/: __init__.py  interface.py  whisper.py
s3prl_vc/upstream/ppg_sxliu/: e2e_asr_common.py  encoders.py  frontend.py  log_mel.py  model.py  nets_utils.py  stft.py  utterance_mvn.py
s3prl_vc/upstream/ppg_sxliu/encoder/: conformer_encoder.py  subsampling.py
s3prl_vc/utils/: data.py  download.py  plot.py  signal.py  speaker_embedding_resemblyzer.py  speaker_embedding_wespeaker.py  utils.py
s3prl_vc/vocoder/: __init__.py  griffin_lim.py  vocoder.py
tools/: Makefile
utils/: split_data.sh
