[options]
packages = find:
install_requires =
    torch >= 1.12
    librosa >= 0.8.0
    soundfile>=0.10.2
    tensorboardX>=1.8
    matplotlib>=3.1.0
    PyYAML>=3.12
    tqdm>=4.26.1
    kaldiio>=2.14.1
    h5py>=2.9.0
    yq>=2.10.0
    gdown
    filelock
    protobuf<=3.20.1
    parallel-wavegan
    jiwer
    pyworld
    scipy
    pysptk
    transformers
    editdistance
    fastdtw
    s3prl
    
[metadata]
name = s3prl_vc
version = 0.1.0
author = Wen-Chin Huang
author_email = wen.chinhuang2g.sp.m.is.nagoya-u.ac.jp
description = Voice conversion toolkit based on S3PRL: Self-Supervised Speech/Sound Pre-training and Representation Learning Toolkit
keywords = voice conversion, self-supervised learning
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
