[options]
packages = find:
install_requires =
    torch >= 1.13
    librosa >= 0.8.0
    soundfile>=0.10.2
    tensorboardX>=1.8
    matplotlib>=3.1.0
    pyyaml
    tqdm>=4.26.1
    kaldiio>=2.14.1
    h5py>=2.9.0
    yq>=2.10.0
    gdown
    filelock
    protobuf<=3.20.1
    parallel-wavegan
    jiwer
    pyworld
    scipy
    pysptk
    transformers
    editdistance
    fastdtw
    s3prl
    wespeakerruntime
    textgrid
    amfm_decompy
    torch_complex
    openai-whisper
    resemblyzer

[options.entry_points]
console_scripts =
    s3prl-vc-decode = s3prl_vc.bin.decode:main
    s3prl-vc-extract-upstream = s3prl_vc.bin.extract_upstream:main
    s3prl-vc-decode-downstream = s3prl_vc.bin.decode_downstream:main

[metadata]
name = s3prl_vc
version = 0.3.1
author = Wen-Chin Huang
author_email = wen.chinhuang@g.sp.m.is.nagoya-u.ac.jp
description = Voice conversion toolkit based on S3PRL: Self-Supervised Speech/Sound Pre-training and Representation Learning Toolkit
keywords = voice conversion, self-supervised learning
license = MIT
long_description=README.md
long_description_content_type=text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
